# argparse

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml
include/: argparse.hpp
include/general/: algo_utils  algo_utils.hpp  fs_include.hpp  macro_utils  type_trait_utils  type_trait_utils.hpp
include/internet/: curl_helper  curl_helper.hpp  telegram_bot  telegram_bot.hpp
include/json/: json_helper.hpp
include/math/: bound_value  bound_value.hpp  matrix  matrix.hpp
scripts/: build.sh  run_tests.sh
tests/: CMakeLists.txt  bound_value_tests.cpp  json_helper_tests.cpp  macro_tests.cpp  main.cpp  matrix_tests.cpp  test_arg.cpp  test_arg_parse.cpp
